--- a/index.html
+++ b/index.html
@@ -232,84 +232,68 @@
     hintSteps.classList.toggle('hidden');
   });
 
-// Au clic sur un step
-stepBtns.forEach(btn => {
-  btn.addEventListener('click', () => {
-    const step = parseInt(btn.dataset.step);
-    if(hintsUsed >= MAX_HINTS){ alert("Plus d'indices disponibles."); return; }
-    if(btn.disabled) return;
+  stepBtns.forEach(btn => {
+    btn.addEventListener('click', () => {
+      const step = parseInt(btn.dataset.step);
+      if(hintsUsed >= MAX_HINTS){ alert("Plus d'indices disponibles."); return; }
+      if(btn.disabled) return;
 
-    hintSteps.classList.add('hidden'); // cacher menu
+      hintSteps.classList.add('hidden'); 
 
-    // Afficher message Nami
-    const namiModal = document.getElementById('namiModal');
-    const namiMessage = document.getElementById('namiMessage');
-    namiMessage.textContent = "Ohohoh ! Un indice te coûtera 5 Berry... euh, 5 minutes je voulais dire. — Nami";
-    namiModal.classList.remove('hidden');
-    namiModal.style.display = 'flex';
+      const namiModal = document.getElementById('namiModal');
+      const namiMessage = document.getElementById('namiMessage');
+      namiMessage.textContent = "Ohohoh ! Un indice te coûtera 5 Berry... euh, 5 minutes je voulais dire. — Nami";
+      namiModal.classList.remove('hidden');
+      namiModal.style.display = 'flex';
 
-    // Appliquer la pénalité uniquement si OK est cliqué
-    const okBtn = document.getElementById('namiCloseBtn');
-    okBtn.onclick = ()=>{
-      // Appliquer pénalité et ajouter indice
-      if(timer <= HINT_PENALTY){
-        if(!confirm("Prendre cet indice va terminer le temps restant — confirmer ?")) {
-          namiModal.classList.add('hidden');
-          return;
+      const okBtn = document.getElementById('namiCloseBtn');
+      okBtn.onclick = ()=>{
+        if(timer <= HINT_PENALTY){
+          if(!confirm("Prendre cet indice va terminer le temps restant — confirmer ?")) {
+            namiModal.classList.add('hidden');
+            return;
+          }
         }
-      }
-      timer = Math.max(0, timer - HINT_PENALTY);
-      hintsUsed += 1;
+        timer = Math.max(0, timer - HINT_PENALTY);
+        hintsUsed += 1;
 
-const currentHint = document.getElementById('currentHint');
-currentHint.textContent = hintsStore[step];
-currentHint.classList.remove('hidden');
+        const currentHint = document.getElementById('currentHint');
+        currentHint.textContent = hintsStore[step];
+        currentHint.classList.remove('hidden');
 
-      btn.disabled = true;
-      btn.classList.add('bg-gray-400', 'cursor-not-allowed');
-      btn.classList.remove('bg-amber-400');
+        btn.disabled = true;
+        btn.classList.add('bg-gray-400', 'cursor-not-allowed');
+        btn.classList.remove('bg-amber-400');
 
-      namiModal.classList.add('hidden');
-      namiModal.style.display='none';
-      updateTimerDisplay();
-      if(timer === 0) endGame();
-    };
+        namiModal.classList.add('hidden');
+        namiModal.style.display='none';
+        updateTimerDisplay();
+        if(timer === 0) endGame();
+      };
+    });
   });
-});
-
 
   document.getElementById('namiCloseBtn').addEventListener('click', ()=>{
     const namiModal = document.getElementById('namiModal');
     namiModal.classList.add('hidden');
     namiModal.style.display='none';
   });
-document.getElementById('namiRefuseBtn').addEventListener('click', ()=>{
-  const namiModal = document.getElementById('namiModal');
-  namiModal.classList.add('hidden');
-  namiModal.style.display = 'none';
-  // Ne rien appliquer : pas de pénalité, pas d'indice ajouté
-});
-
-
-  // --- QR Code ---
-  let html5QrcodeScanner = null;
-  qrBtn.addEventListener('click', ()=>{
-    if(qrSection.classList.contains('hidden')){ qrSection.classList.remove('hidden'); startQr(); } 
-    else { stopQr(); qrSection.classList.add('hidden'); }
+  document.getElementById('namiRefuseBtn').addEventListener('click', ()=>{
+    const namiModal = document.getElementById('namiModal');
+    namiModal.classList.add('hidden');
+    namiModal.style.display = 'none';
   });
 
-  function startQr(){
-    html5QrcodeScanner = new Html5Qrcode('qr-reader', { verbose:false });
-    Html5Qrcode.getCameras().then(cameras=>{
-      const cameraId = cameras && cameras.length ? cameras[0].id : null;
-      if(!cameraId){ alert('Aucune caméra détectée.'); return; }
-      html5QrcodeScanner.start(cameraId, {fps:10, qrbox:250}, qrSuccess, qrError)
-        .catch(err=>{ console.error(err); alert('Impossible d\'accéder à la caméra : '+err); });
-    }).catch(err=>{ alert('Erreur caméra : '+err); });
-  }
-  function stopQr(){ if(html5QrcodeScanner){ html5QrcodeScanner.stop().catch(()=>{}); html5QrcodeScanner.clear(); html5QrcodeScanner=null; } }
-  function qrSuccess(decodedText){ qrResult.textContent = `QR détecté : ${decodedText}`; scanOutput.innerHTML += `<div>QR : ${decodedText}</div>`; stopQr(); qrSection.classList.add('hidden'); }
-  function qrError(err){ }
+  // --- QR Code (désactivé mais bouton actif) ---
+  qrBtn.addEventListener('click', ()=>{
+    if(qrSection.classList.contains('hidden')) {
+      qrSection.classList.remove('hidden'); 
+      qrResult.textContent = "⚠️ Fonction scanner désactivée pour l'instant.";
+    } else {
+      qrSection.classList.add('hidden');
+      qrResult.textContent = "";
+    }
+  });
 
   // --- End Game Moussaillon ---
   function endGame(){ endModal.classList.remove('hidden'); endModal.style.display='flex'; }
@@ -351,22 +335,20 @@ document.getElementById('namiRefuseBtn').addEventListener('click', ()=>{
     finishModal.style.display = 'none';    
   });
 
-  // --- Bouton Terminé après Évidemment / Non ---
   closeBtn.addEventListener('click', ()=>{
-    // Masquer modals et zones aside/main
     main.style.display = 'none';
     aside.style.display = 'none';
     finishModal.style.display = 'none';
     endModal.style.display = 'none';
 
-    // Afficher écran Equipage
     crewScreen.classList.remove('hidden');
     crewScreen.style.display = 'flex';
   });
 
   updateTimerDisplay();
-  window.addEventListener('beforeunload', ()=>{ stopQr(); });
 </script>
+
 
 </body>
 </html>
+
