--- a/index.html
+++ b/index.html
@@ -59,9 +59,16 @@
           </div>
         </div>
 
-        <section class="flex items-center justify-center">
-          <img src="One piece/flag.jpeg" alt="Drapeau Luffy" class="w-40" />
-        </section>
+<section class="flex items-center justify-center">
+  <img src="One piece/flag.jpeg" alt="Drapeau Luffy" class="w-40" />
+</section>
+
+<!-- Nouveau cadran QR -->
+<section id="qrHintSection" class="hidden flex flex-col items-start gap-2 mt-4 p-3 bg-white rounded border">
+  <h4 class="font-semibold">Résultat tatouage Barbe Blanche</h4>
+  <div id="qrHintContent" class="text-gray-800"></div>
+</section>
+
       </div>
     </main>
 
@@ -139,6 +146,16 @@
     "Indice étape 4 : Avec mon sens de l'orientation je suis obligée de suivre l'ordre donné — Zoro",
     "Indice étape 5 : Hiiiii vite ! Usopp a le mal des transports, allons vite chercher des soins en ville — Chopper"
   ];
+  
+  // --- Vérifier si un QR Code a été scanné via l'URL ---
+const urlParams = new URLSearchParams(window.location.search);
+if(urlParams.has('indice')){
+  const qrStep = parseInt(urlParams.get('indice'));
+  if(!isNaN(qrStep) && qrStep >=0 && qrStep < hintsStore.length){
+    const qrContent = document.getElementById('qrHintContent');
+    qrContent.textContent = hintsStore[qrStep];
+  }
+}
 
   const timerDisplay = document.getElementById('timerDisplay');
   const startBtn = document.getElementById('startBtn');
@@ -301,4 +318,5 @@
 </script>
 </body>
 </html>
+
 
