--- a/index.html
+++ b/index.html
@@ -57,15 +57,7 @@
               <button class="step-btn px-3 py-2 rounded bg-amber-400 text-white font-semibold" data-step="4">Step 5</button>
             </div>
           </div>
-
-          <div class="flex items-center gap-3">
-            <button id="qrBtn" class="px-3 py-2 rounded-lg bg-white border">📷 Scanner QR</button>
-            <input type="file" id="cameraInput" accept="image/*" capture="environment" class="hidden">
-          </div>
-          
         </div>
-
-
 
         <section class="flex items-center justify-center">
           <img src="One piece/flag.jpeg" alt="Drapeau Luffy" class="w-40" />
@@ -77,11 +69,10 @@
     <aside class="col-span-4 scroll">
       <h3 class="text-lg font-semibold mb-3">Indices (coût : 5min)</h3>
 
-<!-- Bloc pour afficher l'indice actuel plus en avant -->
-<div id="currentHint" class="mb-4 p-3 bg-yellow-100 border-l-4 border-amber-500 rounded font-semibold text-gray-800 hidden"></div>
+      <!-- Bloc pour afficher l'indice actuel plus en avant -->
+      <div id="currentHint" class="mb-4 p-3 bg-yellow-100 border-l-4 border-amber-500 rounded font-semibold text-gray-800 hidden"></div>
 
-<ol id="hintsList" class="list-decimal pl-5 space-y-2 text-sm text-gray-800"></ol>
-
+      <ol id="hintsList" class="list-decimal pl-5 space-y-2 text-sm text-gray-800"></ol>
 
       <!-- Modal Nami -->
       <div id="namiModal" class="fixed inset-0 bg-black bg-opacity-40 hidden items-center justify-center">
@@ -89,10 +80,9 @@
           <img src="One piece/nami.jpeg" alt="Nami" class="w-20 h-20 object-cover rounded-full flex-shrink-0" />
           <div id="namiMessage" class="mt-2 font-semibold text-sm text-gray-800"></div>
           <div class="ml-auto mt-4 flex gap-2">
-  <button id="namiCloseBtn" class="px-4 py-2 rounded bg-lime-500">Ok</button>
-  <button id="namiRefuseBtn" class="px-4 py-2 rounded bg-red-500 text-white">Je suis un rat</button>
-</div>
-
+            <button id="namiCloseBtn" class="px-4 py-2 rounded bg-lime-500">Ok</button>
+            <button id="namiRefuseBtn" class="px-4 py-2 rounded bg-red-500 text-white">Je suis un rat</button>
+          </div>
         </div>
       </div>
 
@@ -111,13 +101,6 @@
     <!-- Écran final Equipage -->
     <div id="crewScreen" class="hidden col-span-12 w-full flex justify-center items-center mt-6">
       <img src="One piece/Equipage.jpeg" alt="Equipage" class="max-w-full h-auto rounded-lg shadow-lg" />
-    </div>
-
-    <footer class="col-span-12 text-center mt-4 text-xs text-gray-700">
-      Test en local : place le dossier <code>One piece/</code> à côté du fichier HTML, et ouvre <code>escape-onepiece.html</code> dans ton navigateur. 
-      Pour la caméra, sert le site en HTTPS ou sur localhost.
-    </footer>
-  </div>
 
   <!-- MODALS -->
   <!-- Modal Terminer -->
@@ -159,14 +142,13 @@
   let timerInterval = null;
   let started = false;
   let hintsUsed = 0;
- const hintsStore = [
-  "Indice étape 1 : Pff, pourquoi faut-il toujours partager les trésors avec la famille… — Nami",
-  "Indice étape 2 : C’est étrange… des lignes se dessinent sur le papier, mais aucun hiéroglyphe visible — Robin",
-  "Indice étape 3 : Arrr… j'ai jamais aimé le vin… — Brawk !",
-  "Indice étape 4 : Avec mon sens de l'orientation je suis obligée de suivre l'ordre donné — Zoro",
-  "Indice étape 5 : Hiiiii vite ! Usopp a le mal des transports, allons vite chercher des soins en ville — Chopper"
-];
-
+  const hintsStore = [
+    "Indice étape 1 : Pff, pourquoi faut-il toujours partager les trésors avec la famille… — Nami",
+    "Indice étape 2 : C’est étrange… des lignes se dessinent sur le papier, mais aucun hiéroglyphe visible — Robin",
+    "Indice étape 3 : Arrr… j'ai jamais aimé le vin… — Brawk !",
+    "Indice étape 4 : Avec mon sens de l'orientation je suis obligée de suivre l'ordre donné — Zoro",
+    "Indice étape 5 : Hiiiii vite ! Usopp a le mal des transports, allons vite chercher des soins en ville — Chopper"
+  ];
 
   const timerDisplay = document.getElementById('timerDisplay');
   const startBtn = document.getElementById('startBtn');
@@ -175,9 +157,6 @@
   const hintSteps = document.getElementById('hintSteps');
   const hintsList = document.getElementById('hintsList');
   const scanOutput = document.getElementById('scanOutput');
-  const qrBtn = document.getElementById('qrBtn');
-  const qrSection = document.getElementById('qrSection');
-  const qrResult = document.getElementById('qr-result');
   const finishBtn = document.getElementById('finishBtn');
 
   const finishModal = document.getElementById('finishModal');
@@ -218,7 +197,7 @@
   function resetGame(){
     clearInterval(timerInterval);
     timer = TOTAL_TIME; started = false; hintsUsed = 0;
-    hintsList.innerHTML=''; scanOutput.innerHTML=''; qrResult.innerHTML=''; updateTimerDisplay();
+    hintsList.innerHTML=''; scanOutput.innerHTML=''; updateTimerDisplay();
   }
 
   startBtn.addEventListener('click', ()=>{ startTimer(); });
@@ -283,23 +262,6 @@
     namiModal.style.display = 'none';
   });
 
-// --- QR Code (ouvre la caméra native) ---
-const cameraInput = document.getElementById('cameraInput');
-
-qrBtn.addEventListener('click', ()=>{
-  // Simule un clic sur l'input caché
-  cameraInput.click();
-});
-
-// Quand une photo est prise / choisie
-cameraInput.addEventListener('change', (event)=>{
-  if(event.target.files.length > 0){
-    const file = event.target.files[0];
-    scanOutput.innerHTML += `<div>📷 Photo sélectionnée : ${file.name}</div>`;
-  }
-});
-
-
   // --- End Game Moussaillon ---
   function endGame(){ endModal.classList.remove('hidden'); endModal.style.display='flex'; }
 
@@ -352,7 +314,5 @@ cameraInput.addEventListener('change', (event)=>{
 
   updateTimerDisplay();
 </script>
-
-
 </body>
 </html>
